# invoice-amount-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: category-rules.json
skills/: README.md
skills/invoice-totaler/: SKILL.md
skills/invoice-totaler/agents/: openai.yaml
skills/invoice-totaler/references/: amount-policy.md
src/invoice_amount_tool/: __init__.py  cli.py  core.py  report.py
tests/: test_cli.py  test_core.py
